#224 [HxSidebar] Fix subsections not opening in sidebar collapsed state by removing the entire HxDropdown when in expanded state

--- a/Havit.Blazor.Components.Web.Bootstrap/Navigation/HxSidebarItem.razor.css
+++ b/Havit.Blazor.Components.Web.Bootstrap/Navigation/HxSidebarItem.razor.css
@@ -30,7 +30,7 @@
 	display: inline-flex;
 }
 
-::deep .hx-sidebar-item .hx-sidebar-item-navlink-content-inner {
+::deep .hx-sidebar-item-navlink-content-inner {
 	margin-right: auto;
 }
 
